--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,10 +1,36 @@
 <!DOCTYPE html>
 <html>
     <head>
-<link rel=stylesheet type=text/css href="{{ url_for('static', filename='style4js.css') }}">
+
 <!-- <meta http-equiv="refresh" content="10">  -->
 <style type="text/css">
 *{ margin:0; padding:0;}
+
+body            { font-family: 'Courier New', Georgia, sans-serif; font-weight:bold; } 
+breaker      { background: #fff; }
+.default     { background: #000; color: #fff}
+.dcc       	 { background: #00F5FF; color: #000}
+.ss7         { background: #CDFFD0; color:#000}
+.sip         { background: #707070; color: #fff}
+#leg_a       { background: #707070;color: #FFADAD;}
+#leg_b       { background: #707070;color: #99FF79;}
+#leg_c       { background: #707070;color: #FEFF79;}
+
+#leg_0       { background: #707070;color: #FFADAD;}
+#leg_1       { background: #707070;color: #FEFF79;}
+#leg_2       { background: #707070;color: #99FF79;}
+#leg_3       { background: #707070;color: #8BFFFD;}
+#leg_4       { background: #707070;color: #EDD7FF;}
+#leg_5       { background: #707070;color: #FDFFFF;}
+
+#err {font-family: 'Courier New', Georgia, sans-serif; font-size: 1.2em; color: #FF0000;}
+
+html,body{
+ padding:0px!important;
+ padding:100px 0px;
+ width:100%;
+ height:100%;
+}
  
 html,body{
  padding:0px!important;
